--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <td><a href="https://pns.kurogame.com/" style="text-decoration:none; color:white;"><big><i>访问官网</i></big></a></th>
                     <td><a href="web/link02.html" style="text-decoration:none; color:white;"><big><i>版本PV概览</i></big></td>
                     <td><a href="web/link03.html" style="text-decoration:none; color:white;"><big><i>主要势力</i></big></td>
-                    <td><a href="" style="text-decoration: none;color: white;"><big><i>返回寝室主页</i></big></a></td>
+                    <td><a href="https://lvisla.github.io/ZYC/" style="text-decoration: none;color: white;"><big><i>返回寝室主页</i></big></a></td>
                 </tr>
             </table>  
         </div>
